# odin-vsm

./: .gitignore  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  docker-compose.yaml  valheim.env.example
.github/workflows/: release.yml
scripts/: apply-patch.sh  deploy.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/api/: mod.rs  thunderstore.rs
src/commands/: backups.rs  docker.rs  fix.rs  health.rs  init.rs  mod.rs  mods.rs  patch.rs  status.rs  worlds.rs
src/utils/: banner.rs  display.rs  env.rs  fs.rs  mod.rs  net.rs
