[package]
name = "odin"
version = "1.0.2"
edition = "2021"
authors = ["Z3R0D4Y"]
description = "Manage your Valheim dedicated server with confidence — a fast, single-binary Rust CLI for Docker, mods, backups, and world sync."
license = "MIT"

[[bin]]
name = "odin"
path = "src/main.rs"

[lib]
name = "odin"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.38", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# HTTP client (Thunderstore API)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Colors / terminal
colored = "2.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
dialoguer = "0.11"
walkdir = "2.5"
md5 = "0.7"
zip = "2.1"

# System (uid/gid checks used in fix, mods, health, worlds)
libc = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0